--- a/home.html
+++ b/home.html
@@ -1,12 +1,266 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" type="image/png" sizes="32x32" href="img/icon.png">
+
+    <!-- Style Sheet -->
+
+    <link rel="stylesheet" href="css/style.css" />
+
+    <!-- Font Awesome -->
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <title>Coutfits - Boost Your Style</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <!-- Navigation Bar -->
+    <nav>
+      <div class="container">
+        <div class="left">
+          <div class="logo">
+            <img src="img/logo.png" alt="logo" />
+          </div>
+          <ul>
+            <li>Menu <i class="fas fa-chevron-down"></i></li>
+            <li>Home</li>
+          </ul>
+        </div>
+        <div class="search">
+          <i class="fas fa-search"></i>
+        </div>
+        <div class="buttons">
+          <div class="btn login">LOGIN</div>
+          <div class="btn register">REGISTER</div>
+        </div>
+      </div>
+    </nav>
+    <!-- End Navigation Bar -->
+
+    <!-- Offer Section -->
+    <div class="offer">
+      <div class="container">
+        <div class="offer-heading">30% off on bodycon dresses!</div>
+        <p>code: CHRISTMAS2022</p>
+        <div class="btn">shop now</div>
+      </div>
+    </div>
+    <!-- End Offer Section -->
+
+    <!-- First Section -->
+    <section class="section1">
+      <div class="container">
+        <div class="left-part">
+          <div class="main-heading">COUTFITS</div>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing <br />
+            elit, sed do eiusmod tempor incididunt ut labore et <br />
+            dolore magna aliqua.
+          </p>
+          <div class="buttons">
+            <div class="btn login">LOGIN</div>
+            <div class="btn register">JOIN US</div>
+          </div>
+        </div>
+        <div class="rigt-part">
+          <img src="img/1.png" alt="dresses preview" />
+        </div>
+        <div class="arrow">
+          <a href="#section2">
+            click here <br />
+            <i class="fas fa-chevron-down"></i>
+          </a>
+        </div>
+      </div>
+    </section>
+    <!-- End First Section -->
+
+    <!-- Second Section -->
+    <section class="section2" id="section2" >
+      <div  class="heading">ALBUM <span>ALBUM</span></div>
+      <div class="container">
+        <div class="card best-seller">
+          <div class="image"><img src="img/2.png" alt="dress" /></div>
+          <div class="card-body">
+            <div class="hashtags">
+              #weddingdress #whitedress <br />
+              #infantocollection
+            </div>
+            <div class="card-head">Infanto dress</div>
+            <div class="card-desc">
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipiscing elit, sed do eiusmod tempor incididunt <br />
+              ut labore et dolore magna aliqua.
+            </div>
+            <div class="profile">
+              <div class="profile-image">
+                <img src="img/profile.png" alt="profile picture" />
+              </div>
+              <div class="profile-info">
+                <div class="profile-head">Bethana Ashley</div>
+                <p>
+                  "I firmly believe that with the right dress you can rule the
+                  world"
+                </p>
+              </div>
+            </div>
+          </div>
+          <i class="far fa-comment-dots"> <div class="comments">hello</div></i>
+        </div>
+        <div class="card">
+          <div class="image"><img src="img/3.png" alt="dress" /></div>
+          <div class="card-body">
+            <div class="hashtags">#nightdress #spectrecollection</div>
+            <div class="card-head">Spectre dress</div>
+            <div class="card-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </div>
+          </div>
+          <i class="far fa-comment-dots"> <div class="comments">hello</div></i>
+        </div>
+        <div class="card">
+          <div class="image"><img src="img/4.png" alt="dress" /></div>
+          <div class="card-body">
+            <div class="hashtags">#weddingdress #preactorcollection</div>
+            <div class="card-head">Preactor</div>
+            <div class="card-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </div>
+          </div>
+          <i class="far fa-comment-dots"> <div class="comments">hello</div></i>
+        </div>
+        <div class="card">
+          <div class="image"><img src="img/5.png" alt="dress" /></div>
+          <div class="card-body">
+            <div class="hashtags">#oneshoulderdress #nexocollection</div>
+            <div class="card-head">Nexo dress</div>
+            <div class="card-desc">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit
+            </div>
+          </div>
+          <i class="far fa-comment-dots">
+            <div class="comments">hello</div>
+          </i>
+        </div>
+      </div>
+    </section>
+    <!-- End Second Section -->
+
+    <!-- Third Section -->
+    <section class="section3">
+      <div class="heading">ACCESSORIES <span>ACCESSORIES</span></div>
+      <div class="container">
+        <i class="fas fa-chevron-left"></i>
+        <div class="cards-container">
+          <div class="card">
+            <div class="accesory-image">
+              <img src="img/6.png" alt="Accessories" />
+            </div>
+            <div class="card-body">
+              <div class="title-price">
+                <div class="card-heading">DIAMOND</div>
+                <div class="price">$120</div>
+              </div>
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+          </div>
+          <div class="card">
+            <div class="accesory-image">
+              <img src="img/7.png" alt="Accessories" />
+            </div>
+            <div class="card-body">
+              <div class="title-price">
+                <div class="card-heading">DIAMOND</div>
+                <div class="price">$120</div>
+              </div>
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+          </div>
+          <div class="card">
+            <div class="accesory-image">
+              <img src="img/8.png" alt="Accessories" />
+            </div>
+            <div class="card-body">
+              <div class="title-price">
+                <div class="card-heading">DIAMOND</div>
+                <div class="price">$120</div>
+              </div>
+              <i class="fas fa-shopping-cart"></i>
+            </div>
+          </div>
+        </div>
+        <i class="fas fa-chevron-right"></i>
+      </div>
+    </section>
+    <!-- End Third Section -->
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row-1">
+          <div class="col-1">
+            <div class="logo">
+              <img src="img/logo.png" alt="logo" />
+            </div>
+            <p>
+              The latest fashion collections, beauty coverage, celebrity style,
+              fashion week updates, culture reviews, <br />
+              and videos on coutfits.com.
+            </p>
+            <div class="links">
+              <i class="fab fa-facebook-f"></i>
+              <i class="fab fa-twitter"></i>
+              <i class="fab fa-pinterest-p"></i>
+              <i class="fab fa-instagram"></i>
+              <i class="fab fa-tiktok"></i>
+            </div>
+          </div>
+          <div class="col-2">
+            <span>More from Coutfits</span>
+            <span>Newsletter</span>
+            <span>Customer Care</span>
+            <span>Contact us</span>
+            <span>About Vogue</span>
+            <span>Careers</span>
+          </div>
+          <div class="col-3">
+            <span>See More Stories</span>
+            <span>Fashion</span>
+            <span>Beauty</span>
+            <span>Culture</span>
+            <span>Living</span>
+            <span>Runway</span>
+            <span>The Get</span>
+            <span>Magazine</span>
+          </div>
+        </div>
+        <div class="row-2">
+          <hr />
+        </div>
+        <div class="row-3">
+          <div class="row-3-col-1">
+            <span>Sitemap</span> | <span>Accessibility</span> |
+            <span>Help Masthead</span> | <span>Condé Nast Spotlight
+            <span class="col-btn">COOKIES SETTINGS</span>
+          </div>
+          <div class="row-3-col-2">
+            CN Fashion & Beauty <span class="selection">United States <i class="fas fa-chevron-down"></i></span>
+          </div>
+        </div>
+        <div class="row-4">
+          &copy; 2021 Ashes international. All rights reserved. Use of this site constitutes acceptance of our <a href="#">User Agreement</a> and <a href="#">Privacy Policy</a> and <a href="#">Cookie Statement</a> and Your <a href="#">Egypt Privacy Rights</a>. Coutfits may earn a portion of sales from products that are purchased through our site as part of our Affiliate Partnerships with retailers. The material on this site may not be reproduced, distributed, transmitted, cached or otherwise used, except with the prior written permission of Ashes international. <a href="#">Ad Choices</a>
+        </div>
+      </div>
+    </footer>
+    <!-- End Footer -->
+  </body>
 </html>
